--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="public/favicon.jpg" />
     <link rel="stylesheet" href="./public/style.css" />
     <script type="module" src="./index.js"></script>
 </head>
+
 <body>
-    <div id="table-container">
-        <table id="table">
-            <tr>
-                <th>Week</th>
-                <th>Monday</th>
-                <th>Tuesday</th>
-                <th>Wednesday</th>
-                <th>Thursday</th>
-                <th>Friday</th>
-                <th>Saturday</th>
-                <th>Sunday</th>
-            </tr>
-        </table>
+    <div id="container">
+        <div id="ui-controls">
+            <label>Theme: </label>
+            <button id="theme-dark">Dark
+            <button id="theme-light">Light</button>
+        </div>
+        <div id="table-container">
+            <table id="table">
+                <tr>
+                    <th>Week</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                    <th>Sunday</th>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
