--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/jpg" href="public/favicon.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="public/favicon.png" />
     <link rel="stylesheet" href="./public/style.css" />
     <script type="module" src="./index.js"></script>
 </head>
